--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -12,7 +12,7 @@
 
   h2 {
     margin-bottom: 0;
-    color: $primary-color;
+    color: $primary-color !important;
     font-weight: 700;
     font-family: "Lato";
   }
