--- a/frontend/src/core/components/CreateForm/CreateForm.scss
+++ b/frontend/src/core/components/CreateForm/CreateForm.scss
@@ -18,7 +18,7 @@
       font-weight: 300;
     }
 
-    .custom-checkbox {
+    .form-check {
       padding-left: 45px;
 
       .custom-control-label {
