--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -531,7 +531,8 @@ textarea.form-control::placeholder {
   position: absolute;
 }
 
-input[type="checkbox"] {
+input[type="checkbox"],
+input[type="radio"] {
   position: relative;
   width: 1.5em;
   height: 1.5em;
@@ -572,6 +573,67 @@ input[type="checkbox"] {
     }
   }
 }
+
+// input[type="radio"] {
+//   position: absolute;
+//   opacity: 0;
+
+//   +.radio-label {
+//     &:before {
+//       content: '';
+//       background: $primary-color;
+//       border-radius: 100%;
+//       border: 1px solid white;
+//       display: inline-block;
+//       width: 1.4em;
+//       height: 1.4em;
+//       position: relative;
+//       top: -0.2em;
+//       margin-right: 1em;
+//       vertical-align: top;
+//       cursor: pointer;
+//       text-align: center;
+//       transition: all 250ms ease;
+//     }
+//   }
+
+//   &:checked {
+//     +.radio-label {
+//       &:before {
+//         background-color: $primary-color;
+//         box-shadow: inset 0 0 0 4px #000;
+//       }
+//     }
+//   }
+
+//   &:focus {
+//     +.radio-label {
+//       &:before {
+//         outline: none;
+//         border-color: $primary-color;
+//       }
+//     }
+//   }
+
+//   &:disabled {
+//     +.radio-label {
+//       &:before {
+//         box-shadow: inset 0 0 0 4px $primary-color;
+//         border-color: white;
+//         background: white;
+//       }
+//     }
+//   }
+
+//   +.radio-label {
+//     &:empty {
+//       &:before {
+//         margin-right: 0;
+//       }
+//     }
+//   }
+// }
+
 
 /* Custom scroll bar. Not supports in Firefox and IE */
 
