--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -3,7 +3,9 @@
 .p-badge {
   margin: 10px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: $panel-radius;
+  -webkit-box-shadow: $default-box-shadow;
+  -moz-box-shadow: $default-box-shadow;
   box-shadow: $default-box-shadow;
   display: flex;
   flex-direction: column;
