--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -24,11 +24,12 @@
 
   .body {
     padding-top: 5px;
-    box-shadow: 1px 15px 53px -26px rgba(33, 33, 33, .1);
+    box-shadow: $default-box-shadow;
     padding-left: 30px;
     padding-right: 10px;
     padding-bottom: 15px;
     overflow-x: auto;
     max-height: 60vh;
+    border-radius: $table-radius;
   }
 }
