--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -2,15 +2,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@300;400;700;800&display=swap");
 
 // Table variables
-$table: (columns: (background-color: theme-color("dark"),
+$table: (
+  columns: (
+    background-color: theme-color("dark"),
     color: white,
   ),
-  data: (odd: "",
+  data: (
+    odd: "",
     even: "",
   ),
   selected-item: (background-color: rgba(0, 0, 0, 0.075),
   ),
 );
+
 
 // color variables:
 // Primary colors
@@ -38,11 +42,14 @@ $title: (font: "Open Sans",
 $paragraph: (font: "Lato",
   type: sans-serif,
   weight: 400,
-  color: $dark-gray);
+  color: $dark-gray
+);
 
 // utils variables
+$panel-radius: 15px;
+$table-radius: 15px;
 $default-border-radius: 25px;
-$default-box-shadow: 1px 15px 53px -26px rgba(33, 33, 33, .1);
+$default-box-shadow: 0px 0px 39px -21px rgba(0, 0, 0, 0.36);
 
 @mixin bordered-layout {
   border: 2px solid $primary-color;
@@ -158,7 +165,7 @@ form {
 .btn-primary:focus,
 .btn-outline-primary:active,
 .btn-primary:active,
-.show>.btn-primary.dropdown-toggle,
+.show > .btn-primary.dropdown-toggle,
 .btn-primary:not(:disabled):not(.disabled):active {
   background-color: $primary-color-darker;
   border-color: $primary-color-darker;
@@ -568,7 +575,7 @@ input[type="radio"] {
       opacity: 1;
     }
 
-    ~label::before {
+    ~ label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
   }
