--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -4,7 +4,7 @@
   .dropdown.cta {
 
     .dropdown-menu.show {
-      border-radius: 15px;
+      border-radius: $panel-radius;
       box-shadow: 0px 1px 9px 1px rgba(33, 33, 33, 0.2);
     }
 
