Add infinite scrolling for apps

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -3,13 +3,10 @@
 
 
 // Table variables
-$table: (
-  columns: (
-    background-color: theme-color("dark"),
+$table: (columns: (background-color: theme-color("dark"),
     color: white,
   ),
-  data: (
-    odd: "",
+  data: (odd: "",
     even: "",
   ),
   selected-item: (background-color: rgba(0, 0, 0, 0.075),
@@ -42,8 +39,7 @@ $title: (font: "Open Sans",
 $paragraph: (font: "Lato",
   type: sans-serif,
   weight: 400,
-  color: $dark-gray
-);
+  color: $dark-gray);
 
 // utils variables
 $panel-radius: 15px;
@@ -170,7 +166,7 @@ form {
 .btn-primary:focus,
 .btn-outline-primary:active,
 .btn-primary:active,
-.show > .btn-primary.dropdown-toggle,
+.show>.btn-primary.dropdown-toggle,
 .btn-primary:not(:disabled):not(.disabled):active {
   background-color: $primary-color-darker;
   border-color: $primary-color-darker;
@@ -290,7 +286,7 @@ label.form-label {
 
 #sidebar {
   padding-top: 5px;
-  // background: $gradient;
+  background: $gradient;
   color: color("white");
 
   #title {
@@ -340,7 +336,8 @@ button.btn {
 
   tbody {
     tr {
-      color: gray;
+      color: #888888;
+      font-family: "Lato";
     }
 
     td {
@@ -586,7 +583,7 @@ input[type="radio"] {
       opacity: 1;
     }
 
-    ~ label::before {
+    ~label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
   }
