--- a/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
+++ b/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
@@ -3,9 +3,9 @@
 .p-card {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 20px 10px;
   border: 1px solid rgba(0, 0, 0, .125);
-  border-radius: 5px;
+  border-radius: 7px;
   box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 6px 0 rgba(0, 0, 0, 0.19);
 
   display: flex;
@@ -14,7 +14,7 @@
   flex-grow: 1;
 
   color: #ffffff;
-  background-color: #07202E;
+  background-color: #06202E;
 
   p,
   h1 {
@@ -33,8 +33,9 @@
 
       .info {
         p:first-of-type {
-          font-size: 1.6em;
-          font-weight: 600;
+          font-size: 18px;
+          font-weight: 800;
+          font-family: "Open Sans";
         }
 
         p:last-of-type {
