--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -45,7 +45,7 @@ $paragraph: (font: "Lato",
 $panel-radius: 15px;
 $table-radius: 15px;
 $default-border-radius: 25px;
-$default-box-shadow: 0 9px 24px 0 rgba(6, 32, 46, 0.1);
+$default-box-shadow: 0px 7px 19px -6px rgba(6, 32, 46, 0.1);
 
 @mixin bordered-layout {
   border: 2px solid $primary-color;
@@ -216,6 +216,16 @@ input {
   }
 }
 
+.alert.alert-light {
+  background-color: $white-smoke;
+  border-color: $white-smoke;
+  color: $dark-gray;
+  border-radius: 25px;
+  padding: 10px 30px;
+  font-family: "Lato";
+  font-weight: 300;
+}
+
 .alert.alert-danger {
   @for $i from 1 through 6 {
     h#{$i} {
@@ -326,10 +336,10 @@ button.btn {
 .app-table {
   thead {
     text-transform: uppercase;
-    color: #000000;
     border: 2px solid transparent;
 
     th {
+      color: $dark-gray;
       border-color: transparent;
     }
   }
