--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -1,67 +1,12 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Open+Sans:wght@300;400;600;700;800&display=swap");
-
-
-// Table variables
-$table: (
-  columns: (
-    background-color: theme-color("dark"),
-    color: white,
-  ),
-  data: (
-    odd: "",
-    even: "",
-  ),
-  selected-item: (background-color: rgba(0, 0, 0, 0.075),
-  ),
-);
-
-
-// color variables:
-// Primary colors
-$primary-color: #27a9e0;
-$primary-color-darker: #1e95c8;
-$dark-blue: #06022e;
-
-// Secondary-colors
-$secondary-color: #474747;
-$dark-gray: #474747;
-$light-gray: #afafaf;
-$white-smoke: #f5f5f5;
-$border-blue: #25a9e0;
-
-$error: #ff0000;
-$alert: #ffbf02;
-
-// Font variables
-$title: (font: "Open Sans",
-  type: sans-serif,
-  weight: 700,
-);
-
-
-$paragraph: (font: "Lato",
-  type: sans-serif,
-  weight: 400,
-  color: $dark-gray
-);
-
-// utils variables
-$panel-radius: 15px;
-$table-radius: 15px;
-$default-border-radius: 25px;
-$default-box-shadow: 0px 0px 39px -21px rgba(33, 33, 33, 0.36);
-
+@import "Variables/All";
 
 @mixin bordered-layout {
   border: 2px solid $primary-color;
   padding: 10px 30px 7px 30px;
   border-radius: $default-border-radius;
 }
-
-$gradient: linear-gradient(180deg,
-  rgba(6, 32, 46, 1) -20%,
-  rgba(37, 169, 224, 1) 110%);
 
 @mixin font-style($type) {
   font-family: map_get($type, font), map_get($type, type);
@@ -106,7 +51,7 @@ body {
   // min-width: 180px;
   font-weight: 400;
   border-radius: $default-border-radius;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
 }
 
 .btn.dropdown-toggle-split {
@@ -190,7 +135,7 @@ input {
 }
 
 .alert {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   padding-top: 20px;
   padding-bottom: 10px;
   background-color: $dark-blue;
@@ -255,7 +200,7 @@ input {
   .alert-heading {
     font-size: 1em;
     font-weight: 300;
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
   }
 }
 
@@ -318,10 +263,7 @@ label.form-label {
 button,
 button.btn {
   min-width: unset;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding: 7px 30px;
 }
 
 .app-table {
@@ -434,7 +376,7 @@ button.btn {
 
 input.form-control,
 textarea.form-control {
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
 }
 
 input.form-control::placeholder,
