--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -45,7 +45,7 @@ $paragraph: (font: "Lato",
 $panel-radius: 15px;
 $table-radius: 15px;
 $default-border-radius: 25px;
-$default-box-shadow: 0px 7px 19px -6px rgba(6, 32, 46, 0.1);
+$default-box-shadow: 0 6px 25px -8px rgba(6, 32, 46, 0.1);
 
 @mixin bordered-layout {
   border: 2px solid $primary-color;
@@ -353,6 +353,7 @@ button.btn {
     td {
       border-top: 1px solid transparent;
       overflow-wrap: anywhere;
+      font-weight: 300;
     }
   }
 }
@@ -598,6 +599,20 @@ input[type="radio"] {
     }
   }
 }
+
+#general {
+  box-shadow: $default-box-shadow;
+
+  .body {
+    padding-bottom: 100px;
+  }
+
+  h1 {
+    color: $dark-gray;
+    margin-bottom: 85px;
+  }
+}
+
 
 // input[type="radio"] {
 //   position: absolute;
