--- a/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
@@ -9,23 +9,24 @@
 
     li {
       height: 30%;
-      margin-left: $default-layout-item-margin-left;
+      padding-left: $default-layout-item-padding-left;
       margin-bottom: 13%;
 
       img {
-        width: 35px;
-        height: 25px;
+        width: 20px;
+        height: 16px;
         margin-right: 10px;
       }
 
       span {
         font-family: "Lato", sans-serif;
         text-transform: uppercase;
-        font-size: 17px;
-        font-weight: bold;
-        letter-spacing: -0.19px;
-        line-height: 8.4px;
-        text-align: left;
+        font-size: 14px;
+        font-weight: 900;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: -0.38px;
       }
     }
   }
