--- a/frontend/src/scss/Variables/DefaultLayout.scss
+++ b/frontend/src/scss/Variables/DefaultLayout.scss
@@ -1,6 +1,7 @@
 @import "Fonts";
 @import "Others";
 
+$default-layout-padding-left-right: 50px;
 $default-layout-item-padding-left: 50px;
 $default-layout-item-padding-right: 50px;
 
