--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -1,28 +1,32 @@
-@import "../../../scss/Core.scss";
+@import "../../../scss/Variables/Fonts";
+@import "../../../scss/Variables/Others";
 
 .p-badge {
-  margin: 10px;
-  padding: 10px;
+  height: 110px;
   border-radius: $panel-radius;
   -webkit-box-shadow: $default-box-shadow;
   -moz-box-shadow: $default-box-shadow;
   box-shadow: $default-box-shadow;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   flex-grow: 1;
+  padding-left: 20px;
 
   h2 {
-    margin-bottom: 0;
-    color: $primary-color !important;
-    font-weight: 700;
-    font-family: "Lato";
+    font-family: $default-font-family;
+    font-size: 24px;
+    color: $primary-color;
+    font-weight: bold;
+    margin-bottom: 4px;
+    letter-spacing: -0.66px;
   }
 
   p {
+    font-family: $default-font-family;
+    font-size: 14px;
+    color: #888888;
     font-weight: 300;
+    letter-spacing: -0.38px;
     margin-bottom: 0;
-    font-size: 1.2em;
-    color: gray;
   }
 }
