--- a/frontend/src/scss/Variables/Others.scss
+++ b/frontend/src/scss/Variables/Others.scss
@@ -1,5 +1,6 @@
 $gradient: linear-gradient(45deg, #27A9E0 0%, #06202E 100%);
-$panel-radius: 15px;
-$table-radius: 15px;
+$panel-radius: 12px;
 $default-border-radius: 25px;
-$default-box-shadow: 0px 0px 39px -21px rgba(33, 33, 33, 0.36);
+$default-box-shadow: 0 6px 25px -8px rgba(6, 32, 46, 0.1);
+
+
